<resources>
    <string name="app_name">MyReceipts</string>
    <string name="receipt_title">Receipt Title</string>
    <string name="receipt_details">Receipt Details</string>
    <string name="receipt_title_hint">Enter a title for the receipt</string>
    <string name="shop_name_hint">Enter shop name</string>
    <string name="comment_hint">Enter comments here</string>
    <string name="send_report_text">Send Report</string>
    <string name="delete_receipt">Delete Receipt</string>
    <string name="location_title">Location</string>
    <string name="location_button">Show in Map</string>
    <string name="date_picker_title">Date of purchase</string>
    <string name="new_receipt">New Receipt</string>
    <string name="receipt_help">Help</string>
    <string name="receipt_report">%1$s! This purchase was made on %2$s from %3$s. Comments: %4$s</string>
    <string name="receipt_report_subject">MyReceipts Receipt Report</string>
    <string name="send_report">Send receipt report via</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyCpOCxsPbl-tXlRIV4nzhnRibIYymdznfY</string>
</resources>
