<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_title"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/receipt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/receipt_title_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/receipt_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>

            <ImageButton
                android:id="@+id/receipt_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_details"/>



    <EditText
        android:id="@+id/receipt_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_name_hint"/>

    <EditText
        android:id="@+id/receipt_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_hint"/>

    <Button
        android:id="@+id/receipt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date"/>



    <Button
        android:id="@+id/receipt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show Location"/>

    <Button
        android:id="@+id/receipt_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_report_text"/>

    <Button
        android:id="@+id/receipt_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_receipt"/>

</LinearLayout>